k8s/coma/apps/flaresolverr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
  namespace: flaresolverr
spec:
  rules:
    - host: "flaresolverr.coma.artichoke.network"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flaresolverr
                port:
                  number: 8191
